# ABC-Database

./: .gitignore  .gitmodules  CMakeLists.txt  Classes.h  README.md
.github/workflows/: main.yml
headers/: Database.h  DatabaseManager.h  DatabaseNode.h
headers/Databases/: ArrayDatabase.h  HashTableDatabase.h  LinkedListDatabase.h
headers/Nodes/: DatabaseNode.h  JSONNode.h  StringNode.h
headers/SortingStrats/: BogoSort.hpp  InsertionSort.hpp  QuickSort.hpp  SelectionSort.hpp  SortingStrategy.hpp
src/: ArrayDatabase.cpp  ArrayDatabase.hpp  DatabaseManager.cpp  HTTPServer.cpp  HashTableDatabase.cpp  LinkedList.hpp  LinkedListDatabase.cpp  LinkedListDatabase.hpp  main.cpp
src/Databases/: ArrayDatabase.cpp  HashTableDatabase.cpp  LinkedListDatabase.cpp
src/Nodes/: JSONNode.cpp  StringNode.cpp
src/SortingStrats/: QuickSort.hpp  SortingStrategy.hpp
src/nodes/: JSONNode.cpp
tests/: databaseTest.hpp  sortTests.hpp  test.cpp  utilTest.hpp
